# VoiceConversionWebApplication

./: .gitignore  A.html  B.html  README.md  a.html  docker-compose.yml  dockerfile  readme.md  requirements.txt  sample.html
demo/css/: login.css  naturalnessMOSEvaluation.css  post.css
demo/html/: F2M.html  M2F.html  login.html  modeSelect.html  mosSelect.html  naturalnessMOSEvaluation.html  naturalnessMOSSample.html  post.html  post2.html
docker-mysql/: dockerfile  my.cnf
docker-mysql/DB/app_db/: users.ibd
flask/: app.py  makeSps.py  selectModel.py
flask/models/converters/CycleGAN_VC2/: Generator.py  convert.py  preprocess.py  pyproject.toml  requirements.txt
flask/models/preprocess/: removalNoise.py
flask/music/: water_ka.m4a
flask/record_sample/: a.html  main.js  nazotokiha.txt  sample.txt
flask/static/css/: modeSelect.css  mosSelect.css  naturalnessEvaluation.css  naturalnessMOSEvaluation.css  naturalnessMOSSample.css  post.css  sample.css
flask/static/js/: script.js
flask/templates/: login.html  modeSelect.html  mos.html  naturalnessEvaluation.html  naturalnessMOS.html  naturalnessMOSEvaluation.html  naturalnessMOSSample.html  post.html  sample.html
sample/flask/: app.py
sample/flask/record_sample/: main.js
sample/flask/templates/: a.html  post.html  rokuon.html  sample.html  sampleAudio.m4a
src/: setup.sh
src/flask/: app.py  selectModel.py
src/flask/models/converters/CycleGAN_VC2/: pyproject.toml
src/flask/models/converters/CycleGAN_VC2/norm_stats/: mel_sps_normalization.npz
src/flask/templates/: index.html  login.html  (+2 more)
(+32 files in other folders)
