[tool.poetry]
name = "cyclegan-vc2"
version = "0.1.0"
description = ""
authors = ["Halu <tanaka0507official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.14"
torch = "1.6.0"
librosa = "0.9.1"
pyworld = "^0.3.4"
matplotlib = "3.5"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
