[tool.poetry]
name = "cyclegan-vc2"
version = "0.1.0"
description = ""
authors = ["Halu <tanaka0507official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.14"
librosa = "0.9.1"
pyworld = "^0.3.4"
matplotlib = "3.5"
pyyaml = "^6.0.1"
torch = {version = "1.12.1+cpu", source = "torch_cpu"}
torchvision = {version = "0.13.1+cpu", source = "torch_cpu"}
torchaudio = {version = "0.12.1", source = "torch_cpu"}

[[tool.poetry.source]]
name = "torch_cu113"
url = "https://download.pytorch.org/whl/cu113"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry", "poetry-core"]
build-backend = "poetry.core.masonry.api"
